--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <section class="header-icons-container">
             <div class="icons">
-                <a href="/"><span class="flaticon-001-facebook"></span></a>
+                <a href="/"><span class="flatico-001-facebook"></span></a>
                 <a href="/"><span class="flaticon-002-twitter"></span></a>
                 <a href="/"><span class="flaticon-011-instagram"></span></a>
                 <a href="/"><span class="flaticon-010-linkedin"></span></a>
@@ -23,16 +23,21 @@
                 <a href="/"><img src="assets/img/Logo-negro.png" alt="Logo del blog"></a>
             </section>
             <section class="profile-link">
-                <a href="/">Sobre mi</a>
+                <a href="perfil.html">Sobre mi</a>
             </section>
         </nav>
     </header>
 
     <main class="home-main">
         <section>
-            <h1 class="home-main-text">Conoce las novedades y <br> noticias del Mundo Tech</h1>
-            <a class="home-main-button" href="blogs.html"> Entra ya!</a>
+            <h1 class="home-main-text">Conoce las novedades y
+                <br>noticias del Mundo Tech</h1>
+            <a class="home-main-button" href="blogs.html">Entra ya!</a>
         </section>
+        
     </main>
+    <footer>
+        <p> Este es mi blog 🛵 2024 </p>
+    </footer>
 </body>
 </html>
